keycloak/base/pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: namespace-here
  labels:
    app: pgadmin
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: pgadmin
